--- a/lv.html
+++ b/lv.html
@@ -23,7 +23,35 @@ margin-bottom: 25px;
   margin-left: 80px;
 }
 </style>
-<title>Nellai Varadharaja Perumal Kovil</title>
+
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<!--Get your own code at fontawesome.com-->
+	<title>NELLAI VARADHARAJA PERUMAL KOVIL</title>
+	<!-- add icon link -->
+        <link rel = "icon" href =  
+"<i class='fas fa-gopuram' style='font-size:48px;color:red'></i>" 
+        type = "image/x-icon"> 
+</head>
+<body>
+
+
+<!DOCTYPE html> 
+<html> 
+	<head> 
+		<meta charset = "utf-8" /> 
+		
+		<title> 
+			
+		</title> 
+		
+		<!-- add icon link -->
+		<link rel = "icon" 
+		      href = "<i class='fas fa-gopuram' style='font-size:24px'>"
+		type = "image/x-icon"> 
+		
+	</head> 
+	
 <style> 
 #example1 {
   background-image: url(), url(.jpg);
@@ -198,7 +226,58 @@ html {
   background-color: green; 
   background-size: cover;
 }
+<meta name="viewport" content="width=1300px" initial-scale=1.0">
+<style>
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0;
+}
+* {
+  box-sizing: border-box;
+}
 
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+}
+
+html {
+  font-family: "Lucida Sans", sans-serif;
+}
+
+.header {
+  background-color: #9933cc;
+  color: #ffffff;
+  padding: 10px;
+}
+
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  padding: 1px;
+  margin-bottom: 9px;
+  background-color: #33b5e5;
+  color: #ffffff;
+  box-shadow: 0 11px 10px rgba(0,0,0,0.12), 0 11px 22px rgba(0,0,0,0.24);
+}
+
+.menu li:hover {
+  background-color: #0099cc;
+}
+</style>
+</head>
+<body>
+
+<div class="header">
+   <a href="lv.html"><h1><i class='fas fa-gopuram' style='font-size:28px;color:gold'></i>Live Dharshan<i class='fas fa-gopuram' style='font-size:28px;color:gold'></i></h1></a>
+</div>
+  <head>
 <title>GALLERY</title>
     <style>
     #blink{
@@ -219,6 +298,7 @@ html {
       }, 1000); 
     </script>
   </body>
+
 <!DOCTYPE html>
 <html>
 <head>
