--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -23,7 +23,35 @@ margin-bottom: 25px;
   margin-left: 80px;
 }
 </style>
-<title>Nellai Varadharaja Perumal Kovil</title>
+
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+<!--Get your own code at fontawesome.com-->
+	<title>NELLAI VARADHARAJA PERUMAL KOVIL</title>
+	<!-- add icon link -->
+        <link rel = "icon" href =  
+"<i class='fas fa-gopuram' style='font-size:48px;color:red'></i>" 
+        type = "image/x-icon"> 
+</head>
+<body>
+
+
+<!DOCTYPE html> 
+<html> 
+	<head> 
+		<meta charset = "utf-8" /> 
+		
+		<title> 
+			
+		</title> 
+		
+		<!-- add icon link -->
+		<link rel = "icon" 
+		      href = "<i class='fas fa-gopuram' style='font-size:24px'>"
+		type = "image/x-icon"> 
+		
+	</head> 
+	
 <style> 
 #example1 {
   background-image: url(), url(.jpg);
@@ -169,14 +197,14 @@ body{
 </head>
 <body>
 <div class="navbar">
-  <a href="index.html">HOME</a>
-  <a href="g.html">GALLERY</a>
-<a href="#">BRAMHOSTAVAM</a>
-<a href="#">VIDEOS</a>
-<a href="samprokshanam.html">SAMPROKSHANAM 1995</a>
-<a href="mahapushkaram.html">MAHAPUSHKARAM 2018</a>
-<a href="">SAMPROKSHANAM 2013</a>
-<a href="contactus.html">CONTACT US </a>
+  <a href="index.html"><i class='fas fa-gopuram' style='font-size:24px'></i>HOME</a>
+  <a href="g.html"><i class='fas fa-gopuram' style='font-size:24px'></i></i>GALLERY</a>
+<a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>BRAMHOSTAVAM</a>
+<a href="#"><i class='fas fa-gopuram' style='font-size:24px'></i>VIDEOS</a>
+<a href="samprokshanam.html"><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 1995</a>
+<a href="mahapushkaram.html"><i class='fas fa-gopuram' style='font-size:24px'></i>MAHAPUSHKARAM 2018</a>
+<a href=""><i class='fas fa-gopuram' style='font-size:24px'></i>SAMPROKSHANAM 2013</a>
+<a href="contactus.html"><i class='fas fa-gopuram' style='font-size:24px'></i>CONTACT US </a>
   <div class="dropdown">
     <button class="dropbtn">More 
       <i class="fa fa-caret-down"></i>
@@ -247,7 +275,7 @@ html {
 <body>
 
 <div class="header">
-   <a href="lv.html"><h1>Live Dharshan</h1></a>
+   <a href="lv.html"><h1><i class='fas fa-gopuram' style='font-size:28px;color:gold'></i>Live Dharshan<i class='fas fa-gopuram' style='font-size:28px;color:gold'></i></h1></a>
 </div>
   <head>
 <title>GALLERY</title>
@@ -270,6 +298,7 @@ html {
       }, 1000); 
     </script>
   </body>
+
 <style>
 * {
   box-sizing: border-box;
