--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 
 
 <div id="myDIV">
-<p><i class='fas fa-gopuram' style='font-size:28px;color:white'>Nellai</p>
+<p>Nellai</p>
 </div>
 
 
