--- a/index.html
+++ b/index.html
@@ -388,7 +388,39 @@ text-align: center;
 
 <h2></h2>
 <p></p>
+<!DOCTYPE html>
+<html>
+<head>
+<style> 
+#main {
+  width: 70px;
+  height: 300px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: left;
+}
 
+#main div {
+  width: 70px;
+  height: 70px;
+}
+</style>
+</head>
+<body>
+
+<h1><img src="p.png" style="width:640px;height:380px;"></h1>
+
+<div id="main">
+  <div style="background-color:coral;"></div>
+  <div style="background-color:lightblue;"></div>
+  <div style="background-color:pink;"></div>
+</div>
+
+<p><b>Note:</b> Internet Explorer 10 and earlier versions do not support the align-content property.</p>
+
+</body>
+</html>
 <div class="slideshow-container">
 
 
