--- a/index.html
+++ b/index.html
@@ -409,10 +409,10 @@ text-align: center;
 </head>
 <body>
 
-<h1><img src="p.png" style="width:640px;height:380px;"></h1>
+<h1><img src="p.png" style="width:50px;height:80px;"></h1>
 
 <div id="main">
-  <div style="background-color:coral;"></div>
+  <div style="<img src="p.png" style="width:50px;height:80px;">"></div>
   <div style="background-color:lightblue;"></div>
   <div style="background-color:pink;"></div>
 </div>
