--- a/index.html
+++ b/index.html
@@ -395,13 +395,13 @@ text-align: center;
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="vvv2.jpeg" style="width:640px;height:380px;">
+  <img src="vvv2.jpg" style="width:640px;height:380px;">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="vvv3.jpeg" style="width:640px;height:380px;">
+  <img src="vvv3.jpg" style="width:640px;height:380px;">
   <div class="text">Caption Two</div>
   </div>
   <div class="mySlides fade">
