--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ Ratham was built and it has been offered to Lord Varadharaja swamy by Sri Lakshm
 <p>Athyayana Uthsavam is celebrated for 21 days. Usthavar is adorned in different Thirukolams(Decorations). Nalayara Dhivya Prabandham is chanted on all these 21 days and on the 21st day is the Vaigunda Ekadesi festival is completed by performing Veedupadi veedu. On the day of Vaigunda Ekadesi the Usthavar is adorned in sayanakolam. That evening Sorgavasal festival is celebrated.</p></div>
          <hr style="height:2px;border-width:0;color:gray;background-color:white">
  <h1>Other Uthsavam</h1>
-          <p>Hanuman Jayanthi festival is celebrated for 10days during Marhazi ending on Moola Nakshatram (Amavasya) with Pushpanjali. 7 days of Thailiakappu utsavam for Thayar in margazhi,7 days of Pavithrothsavam in the month of Aavani, All Saturdays of the Tamil month Purratasi are celebrated with Garudaseva. Navarathri also celebrated in the same month. Five </p><br />
+          <p>Hanuman Jayanthi festival is celebrated for 10days during Marhazi ending on Moola Nakshatram (Amavasya) with Pushpanjali. 7 days of Thailiakappu utsavam for Thayar in margazhi,7 days of Pavithrothsavam in the month of Aavani, All Saturdays of the Tamil month Purratasi are celebrated with Garudaseva. Navarathri is also celebrated in the same month.  </p><br />
           <img src="ut.jpeg" alt="kovil" style="width:860px;height:240px;">
    <hr style="height:2px;border-width:0;color:gray;background-color:white">
   </div>
