--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -299,7 +299,7 @@ html {
     </script>
   </body>
 
-
+<body>
 <style>
 body {
   font-family: Verdana, sans-serif;
@@ -443,7 +443,7 @@ img.hover-shadow {
 </style>
 <body>
 
-<h2 style="text-align:center">Lightbox</h2>
+<h2 style="text-align:center"></h2>
 
 div class="row">
   <div class="column">
