--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -296,14 +296,14 @@ html {
       setInterval(function() {
          blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
       }, 1000); 
-    </script>
+
 
 
 
 <style>
 body {
   font-family: Verdana, sans-serif;
-  margin: 0;
+  margin: 2;
 }
 
 * {
@@ -311,7 +311,7 @@ body {
 }
 
 .row > .column {
-  padding: 0 8px;
+  padding: 5 12px;
 }
 
 .row:after {
@@ -381,9 +381,9 @@ body {
   position: absolute;
   top: 50%;
   width: auto;
-  padding: 16px;
+  padding: 25px;
   margin-top: -50px;
-  color: white;
+  color: gold;
   font-weight: bold;
   font-size: 20px;
   transition: 0.6s ease;
