--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -443,7 +443,7 @@ img.hover-shadow {
 </style>
 <body>
 
-<h2 style="text-align:center"></h2>
+<h1 style="text-align:center">THAMIRABHARANI MAHAPUSHKARAM 2018</h1>
 
 div class="row">
   <div class="column">
@@ -696,6 +696,7 @@ div class="row">
       <img src="s30.jpeg" style="width:100%">
     </div>
 </div>
+	    </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
