--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -297,9 +297,9 @@ html {
          blink.style.opacity = (blink.style.opacity == 0 ? 1 : 0);
       }, 1000); 
 
+</script>
 
-
-
+<body>
 <style>
 body {
   font-family: Verdana, sans-serif;
