--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -445,7 +445,7 @@ img.hover-shadow {
 
 <h1 style="text-align:center">THAMIRABHARANI MAHAPUSHKARAM 2018</h1>
 
-div class="row">
+<div class="row">
   <div class="column">
     <img src="s31.jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div>
