--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -311,7 +311,7 @@ body {
 }
 
 .row > .column {
-  padding: 0 5px;
+  padding: 2 5px;
 }
 
 .row:after {
@@ -351,11 +351,11 @@ body {
 
 /* The Close Button */
 .close {
-  color: white;
+  color: gold;
   position: absolute;
   top: 10px;
   right: 25px;
-  font-size: 35px;
+  font-size: 45px;
   font-weight: bold;
 }
 
@@ -414,7 +414,7 @@ body {
 }
 
 img {
-  margin-bottom: -4px;
+  margin-bottom: -12px;
 }
 
 .caption-container {
@@ -850,6 +850,13 @@ function showSlides(n) {
   captionText.innerHTML = dots[slideIndex-1].alt;
 }
 </script>
-    
+  <div class="navbar">
+<footer class="w3-center w3-black w3-padding-16">
+  <p>Copyrights@2020<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green"></a></p>
+</footer>
+
+
+</body>
+</html>  
 </body>
 </html>
