--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -299,7 +299,9 @@ html {
 
 </script>
 
-<body>
+<!DOCTYPE html>
+<html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
   font-family: Verdana, sans-serif;
