--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -305,7 +305,7 @@ html {
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
-img {vertical-align: middle;}
+img {vertical-align: center;}
 
 /* Slideshow container */
 .slideshow-container {
