--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -305,12 +305,12 @@ html {
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
-img {vertical-align: center;}
+img {vertical-align: relative;}
 
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  position: relative;
+  position: center;
   margin: auto;
 }
 
@@ -322,7 +322,7 @@ img {vertical-align: center;}
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: gold;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
