--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -310,7 +310,7 @@ img {vertical-align: relative;}
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  position: center;
+  position: relative;
   margin: auto;
 }
 
