--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@ body{
 
 .navbar a {
   float: left;
-  font-size: 9px;
-  color: white;
+  font-size: 11px;
+  color: gold;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
