--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ p  {
   font-family: courier;
   font-size: 90%;
 text-align: center;
-word-break: break-all;
+word-break: keep-all;
 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
@@ -141,8 +141,8 @@ body{
 
 .navbar a {
   float: left;
-  font-size: 11px;
-  color: gold;
+  font-size: 10px;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
