--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -407,39 +407,39 @@ img {vertical-align: relative;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / </div>
-  <img src="s31.jpeg" style="width:500px;height:300px;">
+  <img src="s31.jpeg" style="width:100%;height:300px;">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / </div>
-  <img src="sam2.jpeg" style="width:500px;height:300px;">
+  <img src="sam2.jpeg" style="width:100%;height:300px;">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
-  <img src="sam3.jpeg" style="width:500px;height:300px;">
+  <img src="sam3.jpeg" style="width:100%;height:300px;">
   <div class="text">Caption Three</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
-  <img src="sam4.jpeg" style="width:500px;height:300px;">
+  <img src="sam4.jpeg" style="width:100%;height:300px;">
   <div class="text">Caption Three</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
-  <img src="s1.jpeg" style="width:500px;height:300px;">
+  <img src="s1.jpeg" style="width:100%;height:300px;">
   <div class="text">Caption Three</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
-  <img src="s2.jpeg" style="width:500px;height:300px;">
+  <img src="s2.jpeg" style="width:100%;height:300px;">
   <div class="text">Caption Three</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
-  <img src="s3.jpeg" style="width:500px;height:300px;">
+  <img src="s3.jpeg" style="width:100%;height:300px;">
   <div class="text">Caption Three</div>
 </div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
