--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -333,7 +333,8 @@ img {vertical-align: relative;}
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 0px 0 0 3px;
+	left:0;
+  border-radius: 4px 0 0 4px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
