--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -319,12 +319,12 @@ img {vertical-align: relative;}
   cursor: pointer;
   position: absolute;
   top: 50%;
-  width: auto;
-  padding: 16px;
+  width: 100%;
+  padding: 20px;
   margin-top: -22px;
   color: gold;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 20px;
   transition: 0.6s ease;
   border-radius: 0 0px 3px 0;
   user-select: none;
@@ -333,7 +333,6 @@ img {vertical-align: relative;}
 /* Position the "next button" to the right */
 .next {
   right: 0;
-	left:0;
   border-radius: 4px 0 0 4px;
 }
 
@@ -422,39 +421,174 @@ img {vertical-align: relative;}
 <div class="mySlides fade">
   <div class="numbertext">1 / </div>
   <img src="s31.jpeg" style="width:100%;height:500px;">
-  <div class="text">Caption Text</div>
+  <div class="text">mahapushkaram</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / </div>
   <img src="sam2.jpeg" style="width:100%;height:500px;">
-  <div class="text">Caption Two</div>
+  <div class="text">mahapushkaram</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
   <img src="sam3.jpeg" style="width:100%;height:500px;">
-  <div class="text">Caption Three</div>
+  <div class="text">mahapushkaram</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
   <img src="sam4.jpeg" style="width:100%;height:500px;">
-  <div class="text">Caption Three</div>
+ <div class="text">mahapushkaram</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
   <img src="s1.jpeg" style="width:100%;height:500px;">
-  <div class="text">Caption Three</div>
+ <div class="text">mahapushkaram</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
   <img src="s2.jpeg" style="width:100%;height:500px;">
-  <div class="text">Caption Three</div>
+  <div class="text">mahapushkaram</div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">3 / </div>
   <img src="s3.jpeg" style="width:100%;height:500px;">
-  <div class="text">Caption Three</div>
+ <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s4.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s5.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s6.jpeg" style="width:100%;height:500px;">
+ <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s7.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s8.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s9.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s10.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s11.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s12.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s13.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s14.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s15.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s16.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s17.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s18.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s19.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s20.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s21.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s22.jpeg" style="width:100%;height:500px;">
+ <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s23.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s24.jpeg" style="width:100%;height:500px;">
+ <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s25.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s26.jpeg" style="width:100%;height:500px;">
+ <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s27.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s28.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s29.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">3 / </div>
+  <img src="s30.jpeg" style="width:100%;height:500px;">
+  <div class="text">mahapushkaram</div>
 </div>
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
