--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -317,7 +317,7 @@ img {vertical-align: relative;}
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
-  position: absolute;
+  position: relative;
   top: 50%;
   width: 100%;
   padding: 20px;
@@ -326,14 +326,14 @@ img {vertical-align: relative;}
   font-weight: bold;
   font-size: 20px;
   transition: 0.6s ease;
-  border-radius: 0 0px 3px 0;
+  border-radius: 3px 0px 3px 0;
   user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
-  border-radius: 4px 0 0 4px;
+  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
