--- a/mahapushkaram.html
+++ b/mahapushkaram.html
@@ -419,7 +419,7 @@ img {vertical-align: relative;}
 <h1><div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / </div>
+  <div class="numbertext">1  </div>
   <img src="s31.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
@@ -431,52 +431,52 @@ img {vertical-align: relative;}
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">3 </div>
   <img src="sam3.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">4  </div>
   <img src="sam4.jpeg" style="width:100%;height:500px;">
  <div class="text">mahapushkaram</div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">5  </div>
   <img src="s1.jpeg" style="width:100%;height:500px;">
  <div class="text">mahapushkaram</div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">6 </div>
   <img src="s2.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 <div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">7 </div>
   <img src="s3.jpeg" style="width:100%;height:500px;">
  <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">8 </div>
   <img src="s4.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">9 </div>
   <img src="s5.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">10 </div>
   <img src="s6.jpeg" style="width:100%;height:500px;">
  <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">11 </div>
   <img src="s7.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">12 </div>
   <img src="s8.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
@@ -486,107 +486,107 @@ img {vertical-align: relative;}
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">13 </div>
   <img src="s10.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">14 </div>
   <img src="s11.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">15 </div>
   <img src="s12.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">16 </div>
   <img src="s13.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">17 </div>
   <img src="s14.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">18 </div>
   <img src="s15.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">19 </div>
   <img src="s16.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">20 </div>
   <img src="s17.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">21 </div>
   <img src="s18.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">22</div>
   <img src="s19.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">23 </div>
   <img src="s20.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">24 </div>
   <img src="s21.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">25 </div>
   <img src="s22.jpeg" style="width:100%;height:500px;">
  <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">26 </div>
   <img src="s23.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">27 </div>
   <img src="s24.jpeg" style="width:100%;height:500px;">
  <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">28 </div>
   <img src="s25.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">29 </div>
   <img src="s26.jpeg" style="width:100%;height:500px;">
  <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">30 </div>
   <img src="s27.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">40 </div>
   <img src="s28.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">41 </div>
   <img src="s29.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
 	<div class="mySlides fade">
-  <div class="numbertext">3 / </div>
+  <div class="numbertext">42 </div>
   <img src="s30.jpeg" style="width:100%;height:500px;">
   <div class="text">mahapushkaram</div>
 </div>
