--- a/g.html
+++ b/g.html
@@ -421,44 +421,44 @@ img {vertical-align: relative;}
 <div class="mySlides fade">
   <div class="numbertext">1  </div>
   <img src="222 (1).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / </div>
   <img src="222 (2).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 </div>
   <img src="222 (3).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">4  </div>
   <img src="222 (4).jpeg" style="width:100%;height:500px;">
- <div class="text">mahapushkaram</div>
+ <div class="text"></div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">5  </div>
   <img src="222 (5).jpeg" style="width:100%;height:500px;">
- <div class="text">mahapushkaram</div>
+ <div class="text"></div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">6 </div>
   <img src="222 (6).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 <div class="mySlides fade">
   <div class="numbertext">7 </div>
   <img src="222 (7).jpeg" style="width:100%;height:500px;">
- <div class="text">mahapushkaram</div>
+ <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">8 </div>
   <img src="222 (8).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">9 </div>
@@ -468,77 +468,77 @@ img {vertical-align: relative;}
 	<div class="mySlides fade">
   <div class="numbertext">10 </div>
   <img src="222 (10).jpeg" style="width:100%;height:500px;">
- <div class="text">mahapushkaram</div>
+ <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">11 </div>
   <img src="222 (11).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">12 </div>
   <img src="222 (12).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">3 / </div>
   <img src="222 (13).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">13 </div>
   <img src="222 (14).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">14 </div>
   <img src="222 (15).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">15 </div>
   <img src="222 (16).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">16 </div>
   <img src="222 (17).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">17 </div>
   <img src="222 (18).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">18 </div>
   <img src="222 (19).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">19 </div>
   <img src="222 (20).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">20 </div>
   <img src="222 (21).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">21 </div>
   <img src="222 (22).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">22</div>
   <img src="222 (23).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">23 </div>
   <img src="222 (24).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">24 </div>
@@ -548,48 +548,174 @@ img {vertical-align: relative;}
 	<div class="mySlides fade">
   <div class="numbertext">25 </div>
   <img src="222 (26).jpeg" style="width:100%;height:500px;">
- <div class="text">mahapushkaram</div>
+ <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">26 </div>
   <img src="222 (27).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">27 </div>
   <img src="222 (28).jpeg" style="width:100%;height:500px;">
- <div class="text">mahapushkaram</div>
+ <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">28 </div>
   <img src="222 (29).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">29 </div>
   <img src="222 (30).jpeg" style="width:100%;height:500px;">
- <div class="text">mahapushkaram</div>
+ <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">30 </div>
   <img src="222 (31).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">40 </div>
   <img src="222 (32).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">41 </div>
   <img src="222 (33).jpeg" style="width:100%;height:500px;">
-  <div class="text">mahapushkaram</div>
+  <div class="text"></div>
 </div>
 	<div class="mySlides fade">
   <div class="numbertext">42 </div>
   <img src="222 (34).jpeg" style="width:100%;height:500px;">
   <div class="text"></div>
 </div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (35).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (36).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (37).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="222 (38).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv1.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv2.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv3.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv4.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv6.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="sv7.jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (1).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (2).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (3).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (4).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (5).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (6).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (7).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (8).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (9).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (10).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (11).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (12).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (13).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (14).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (15).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
@@ -665,10 +791,10 @@ function showSlides(n) {
 </head>
 <body>
 
-<h1 style="text-align:center">GALLERY </h1>
+<h1> style="text-align:center">GALLERY </h1>
 
 
-    <<div class="row">
+    <h1><div class="row">
   <div class="column">
     <img src="222 (1).jpeg" style="width:250px;height:300px;" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div>
@@ -1334,7 +1460,7 @@ function showSlides(n) {
 
 </body>
 	</h1>
-`
+
 
 <!-- Footer -->
 
