--- a/g.html
+++ b/g.html
@@ -715,6 +715,251 @@ img {vertical-align: relative;}
   <img src="000 (15).jpeg" style="width:100%;height:500px;">
   <div class="text"></div>
 </div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (16).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (17).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (18).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (19).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (20).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (21).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (22).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (23).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (24).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (25).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (26).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (27).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (28).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (29).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (30).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (31).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (32).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (33).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (34).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (35).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (36).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (37).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (38).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (39).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (40).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (41).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (42).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (43).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (44).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (45).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (46).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (47).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (48).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (49).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (50).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (51).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (52).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (53).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (54).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (55).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (56).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (57).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (58).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (59).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (60).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (61).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (62).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (63).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
+	<div class="mySlides fade">
+  <div class="numbertext">42 </div>
+  <img src="000 (64).jpeg" style="width:100%;height:500px;">
+  <div class="text"></div>
+</div>
 	
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -791,7 +1036,7 @@ function showSlides(n) {
 </head>
 <body>
 
-<h1> style="text-align:center">GALLERY </h1>
+<h1> <style="text-align:center">GALLERY </h1>
 
 
     <h1><div class="row">
