--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ text-align: center;
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
-  position: absolute;
+  position: relative;
   top: 0;
 }
 
@@ -397,24 +397,34 @@ text-align: center;
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="vvv2.jpg" style="width:640px;height:380px;">
-  <div class="text">Caption Two</div>
+  <img src="n1.jpg" style="width:980px;height:500px;">
+  <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="vvv3.jpg" style="width:640px;height:380px;">
-  <div class="text">Caption Two</div>
+  <img src="n2.jpg" style="width:640px;height:380px;">
+  <div class="text"></div>
   </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="r.jpeg" style="width:640px;height:380px;">
-  <div class="text">Caption Two</div>
+  <img src="n3.jpeg" style="width:980px;height:500px;">
+  <div class="text"></div>
 </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="rs.jpeg" style="width:640px;height:380px;">
-  <div class="text">Caption Two</div>
+  <img src="n4.jpeg" style="width:980px;height:500px;">
+  <div class="text"></div>
+  </div>
+	 <div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="n5.jpeg" style="width:980px;height:500px;">
+  <div class="text"></div>
+  </div>
+	 <div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="n6.jpeg" style="width:980px;height:500px;">
+  <div class="text"></div>
   </div>
 </div>
 <br>
