--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ text-align: center;
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
-  position: relative;
+  position: absolute;
   top: 0;
 }
 
@@ -403,27 +403,27 @@ text-align: center;
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n2.jpg" style="width:640px;height:380px;">
+  <img src="n2.jpg" style="width:740px;height:480px;">
   <div class="text"></div>
   </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n3.jpeg" style="width:980px;height:500px;">
+  <img src="n3.jpeg" style="width:740px;height:480px;">
   <div class="text"></div>
 </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n4.jpeg" style="width:980px;height:500px;">
+  <img src="n4.jpeg" style="width:740px;height:480px;">
   <div class="text"></div>
   </div>
 	 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n5.jpeg" style="width:980px;height:500px;">
+  <img src="n5.jpeg" style="width:740px;height:480px;">
   <div class="text"></div>
   </div>
 	 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n6.jpeg" style="width:980px;height:500px;">
+  <img src="n6.jpeg" style="width:740px;height:480px;">
   <div class="text"></div>
   </div>
 </div>
