--- a/index.html
+++ b/index.html
@@ -397,33 +397,33 @@ text-align: center;
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n1.jpg" style="width:980px;height:500px;">
+  <img src="w1.jpg" style="width:980px;height:500px;">
   <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n2.jpg" style="width:740px;height:480px;">
+  <img src="w2.jpg" style="width:740px;height:480px;">
   <div class="text"></div>
   </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n3.jpeg" style="width:740px;height:480px;">
+  <img src="w3.jpg" style="width:740px;height:480px;">
   <div class="text"></div>
 </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n4.jpeg" style="width:740px;height:480px;">
+  <img src="w4.jpg" style="width:740px;height:480px;">
   <div class="text"></div>
   </div>
 	 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n5.jpeg" style="width:740px;height:480px;">
+  <img src="w5.jpg" style="width:740px;height:480px;">
   <div class="text"></div>
   </div>
 	 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="n6.jpeg" style="width:740px;height:480px;">
+  <img src="w6.jpg" style="width:740px;height:480px;">
   <div class="text"></div>
   </div>
 </div>
