--- a/index.html
+++ b/index.html
@@ -397,18 +397,18 @@ text-align: center;
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="w1.jpg" style="width:980px;height:500px;">
+  <img src="w1.jpg" style="width:100%;height:500px;">
   <div class="text"></div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="w2.jpg" style="width:740px;height:480px;">
+  <img src="w2.jpg" style="width:100%;height:480px;">
   <div class="text"></div>
   </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="w3.jpg" style="width:740px;height:480px;">
+  <img src="w3.jpg" style="width:100%;height:480px;">
   <div class="text"></div>
 </div>
   <div class="mySlides fade">
@@ -418,12 +418,12 @@ text-align: center;
   </div>
 	 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="w5.jpg" style="width:740px;height:480px;">
+  <img src="w5.jpg" style="width:100%;height:480px;">
   <div class="text"></div>
   </div>
 	 <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="w6.jpg" style="width:740px;height:480px;">
+  <img src="w6.jpg" style="width:100%;height:480px;">
   <div class="text"></div>
   </div>
 </div>
