--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ text-align: center;
 </div>
   <div class="mySlides fade">
   <div class="numbertext"></div>
-  <img src="w4.jpg" style="width:740px;height:480px;">
+  <img src="w4.jpg" style="width:100%;height:480px;">
   <div class="text"></div>
   </div>
 	 <div class="mySlides fade">
