--- a/index.html
+++ b/index.html
@@ -429,7 +429,13 @@ text-align: center;
 </div>
 <br>
 
-
+<div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span>
+	<span class="dot"></span> 
+	 <span class="dot"></span> 
+</div>
 
 <script>
 var slideIndex = 0;
