--- a/index.html
+++ b/index.html
@@ -426,6 +426,47 @@ text-align: center;
   <img src="w6.jpg" style="width:100%;height:480px;">
   <div class="text"></div>
   </div>
+	<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="w7.jpg" style="width:100%;height:480px;">
+  <div class="text"></div>
+  </div>
+	<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="w8.jpg" style="width:100%;height:480px;">
+  <div class="text"></div>
+  </div>
+	<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="w9.jpg" style="width:100%;height:480px;">
+  <div class="text"></div>
+  </div>
+	<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="w10.jpg" style="width:100%;height:480px;">
+  <div class="text"></div>
+  </div>
+	<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="w11.jpg" style="width:100%;height:480px;">
+  <div class="text"></div>
+  </div>
+	<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="w12.jpg" style="width:100%;height:480px;">
+  <div class="text"></div>
+  </div>
+	<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="w13.jpg" style="width:100%;height:480px;">
+  <div class="text"></div>
+  </div>
+	<div class="mySlides fade">
+  <div class="numbertext"></div>
+  <img src="w15.jpg" style="width:100%;height:480px;">
+  <div class="text"></div>
+  </div>
+	
 </div>
 <br>
 
@@ -435,6 +476,16 @@ text-align: center;
   <span class="dot"></span>
 	<span class="dot"></span> 
 	 <span class="dot"></span> 
+	 <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span>
+	<span class="dot"></span> 
+	 <span class="dot"></span
+		  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span>
+	<span class="dot"></span> 
+	 <span class="dot"></span
 </div>
 
 <script>
