--- a/samprokshanam.html
+++ b/samprokshanam.html
@@ -317,7 +317,7 @@ html {
 </head>
 <body>
 
-<h1><iframe width="800" height="450" src="https://www.youtube.com/embed/HiJhnjwJ2h0?autoplay=1" frameborder="0" allow="accelerometer; autoplay=1"; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h1><iframe width="800" height="450" src="https://www.youtube.com/embed/HiJhnjwJ2h0?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </h1>
 
 
